# librank

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  rank.rs
